crates/wsh-lang/src/parser/snapshots/wsh_lang__parser__tests__alias.snap
---
source: crates/wsh-lang/src/parser/mod.rs
expression: ast
---
Ast {
    defs: [],
    statements: [
        AliasAssign(
            AliasAssign {
                name: "foo",
                pipeline: Pipeline {
                    env: [],
                    commands: [
                        Command {
                            name: "echo",
                            args: [
                                String(
                                    "hi",
                                ),
                            ],
                            merge_stderr: false,
                        },
                        Command {
                            name: "cat",
                            args: [],
                            merge_stderr: false,
                        },
                    ],
                    write: None,
                },
            },
        ),
    ],
}
