crates/wsh-lang/src/parser/snapshots/wsh_lang__parser__tests__backtick_piplines.snap
---
source: crates/wsh-lang/src/parser/mod.rs
expression: ast
---
Ast {
    defs: [],
    statements: [
        Pipeline(
            Pipeline {
                env: [],
                commands: [
                    Command {
                        name: "echo",
                        args: [
                            Pipeline(
                                Pipeline {
                                    env: [],
                                    commands: [
                                        Command {
                                            name: "cat",
                                            args: [
                                                String(
                                                    "file.txt",
                                                ),
                                            ],
                                            merge_stderr: false,
                                        },
                                        Command {
                                            name: "wc",
                                            args: [
                                                String(
                                                    "-l",
                                                ),
                                            ],
                                            merge_stderr: false,
                                        },
                                    ],
                                    write: None,
                                },
                            ),
                        ],
                        merge_stderr: false,
                    },
                ],
                write: None,
            },
        ),
    ],
}
