crates/wsh-lang/src/parser/snapshots/wsh_lang__parser__tests__break_and_continue.snap
---
source: crates/wsh-lang/src/parser/mod.rs
expression: ast
---
Ast {
    defs: [],
    statements: [
        While(
            While {
                condition: Infix(
                    InfixExpr {
                        lhs: Ident(
                            Ident(
                                "x",
                            ),
                        ),
                        rhs: Number(
                            10.0,
                        ),
                        op: Eq,
                    },
                ),
                body: [
                    Break,
                    Continue,
                ],
            },
        ),
    ],
}
