crates/wsh-lang/src/parser/snapshots/wsh_lang__parser__tests__environment_variable_get.snap
---
source: crates/wsh-lang/src/parser/mod.rs
expression: ast
---
Ast {
    defs: [],
    statements: [
        Pipeline(
            Pipeline {
                env: [],
                commands: [
                    Command {
                        name: "echo",
                        args: [
                            Env(
                                Ident(
                                    "FOO",
                                ),
                            ),
                        ],
                        merge_stderr: false,
                    },
                ],
                write: None,
            },
        ),
    ],
}
