crates/wsh-lang/src/parser/snapshots/wsh_lang__parser__tests__export.snap
---
source: crates/wsh-lang/src/parser/mod.rs
expression: ast
---
Ast {
    defs: [],
    statements: [
        Export(
            Export {
                name: Ident(
                    "FOO",
                ),
                expr: Infix(
                    InfixExpr {
                        lhs: Number(
                            10.0,
                        ),
                        rhs: Number(
                            10.0,
                        ),
                        op: Add,
                    },
                ),
            },
        ),
        Export(
            Export {
                name: Ident(
                    "FOO",
                ),
                expr: String(
                    "hello",
                ),
            },
        ),
    ],
}
