crates/wsh-lang/src/parser/snapshots/wsh_lang__parser__tests__global.snap
---
source: crates/wsh-lang/src/parser/mod.rs
expression: ast
---
Ast {
    defs: [],
    statements: [
        Assign(
            Assign {
                name: Ident(
                    "x",
                ),
                expr: Ident(
                    Ident(
                        "hi",
                    ),
                ),
                global: true,
            },
        ),
    ],
}
