crates/wsh-lang/src/parser/snapshots/wsh_lang__parser__tests__if_stmt.snap
---
source: crates/wsh-lang/src/parser/mod.rs
expression: ast
---
Ast {
    defs: [],
    statements: [
        If(
            If {
                condition: Infix(
                    InfixExpr {
                        lhs: Ident(
                            Ident(
                                "x",
                            ),
                        ),
                        rhs: Number(
                            10.0,
                        ),
                        op: Eq,
                    },
                ),
                body: [
                    Pipeline(
                        Pipeline {
                            env: [],
                            commands: [
                                Command {
                                    name: "echo",
                                    args: [
                                        String(
                                            "hi",
                                        ),
                                    ],
                                    merge_stderr: false,
                                },
                            ],
                            write: None,
                        },
                    ),
                ],
                else_: None,
            },
        ),
        If(
            If {
                condition: Infix(
                    InfixExpr {
                        lhs: Ident(
                            Ident(
                                "x",
                            ),
                        ),
                        rhs: Number(
                            10.0,
                        ),
                        op: Eq,
                    },
                ),
                body: [
                    Pipeline(
                        Pipeline {
                            env: [],
                            commands: [
                                Command {
                                    name: "echo",
                                    args: [
                                        String(
                                            "hi",
                                        ),
                                    ],
                                    merge_stderr: false,
                                },
                            ],
                            write: None,
                        },
                    ),
                    Pipeline(
                        Pipeline {
                            env: [],
                            commands: [
                                Command {
                                    name: "echo",
                                    args: [
                                        String(
                                            "hello",
                                        ),
                                    ],
                                    merge_stderr: false,
                                },
                            ],
                            write: None,
                        },
                    ),
                ],
                else_: None,
            },
        ),
    ],
}
